--- a/liba_eyepetizer/build.gradle
+++ b/liba_eyepetizer/build.gradle
@@ -21,5 +21,17 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
+    // compile rootProject.ext.dependencies["design"]
+    compile 'com.android.support:design:23.4.0'
+    // retrofit2引用了okhttp3,okhttp3引用了okio
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
+    compile('com.squareup.retrofit2:retrofit:2.0.2') {
+        transitive = true
+        // exclude group:'com.squareup.okio', module:'okio'
+        // exclude group:'com.squareup.okhttp3', module:'okhttp'
+    }
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    // compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
 }
